--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -2,19 +2,11 @@
 {
 	background-color: #555;
 	background-image: none;
+	border: 0px;
+	box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
 }
 
-.navbar-default .navbar-nav > .active > a, 
-.navbar-default .navbar-nav > .active > a:hover, 
-.navbar-default .navbar-nav > .active > a:focus
+body::before
 {
-	background-color: #777;
-}
-
-.dropdown-menu > .active > a,
-.dropdown-menu > .active > a:hover,
-.dropdown-menu > .active > a:focus
-{
-    color: #fff;
-    background-color: #777;
+	background-image: none;
 }
