--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -6,6 +6,29 @@
 	box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
 }
 
+.col-md-9 img
+{
+	margin-top : 0px;
+	margin-bottom : 0px;
+	border: 0px;
+	padding: 0px;
+	box-shadow: 0px 2px 5px rgba(0,0,0,0.5);	
+}
+
+.col-md-9 blockquote
+{
+	background-color: #f3f3f3;
+	color: #888;
+	margin-top : 0px;
+	margin-bottom : 0px;
+}
+
+.col-md-9 blockquote p
+{
+	font-size: 14px;
+	font-style: italic;
+}
+
 body::before
 {
 	background-image: none;
